@@ -2,6 +2,7 @@
 
 2009-04-20 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js, firebug-lite.css: Issue 1664: Text node text trimming should be configurable in FB Lite
+  * firebug-lite.js: Issue 1654: Internal variables should not be accessible to users
  
 2009-04-19 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js Fixed multiple issues with the HTML Tree:
